test/errors/bitmask_types_error/zs/cyclic_definition_error.zs
package cyclic_definition_error;

bitmask uint8 CyclicDefinition
{
    NONE       = 000b,
    READ       = valueof(READ),
    WRITE      = 10b
};
